Fix how to image showing landscape on iphone

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ html {
   /* height: 100%; */
   /* font-family: 'Quicksand', sans-serif; */
   /* overflow: hidden */
+  padding: env(safe-area-inset); // <- this is the missing piece. Add it.
 }
 
 body {
